# personal_finance

./: .gitignore  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yml
config/category_mappings/: sample_category_mapping.json
config/import_profiles/: sample_bank.json  sample_bank_xls.json
data/cache/: EURUSD=X_cache.csv
src/personal_finance/: balance_history_report.py  book_utils.py  category_mapper.py  foreign_bank_accounts_report.py  fx_rate_cache.py  gnucash_interface.py  main.py  pie_chart_report.py  report_generator.py  spain_modelo_720_report.py  statement_importer.py  us_fbar_report.py
src/powershell/: close_gnucash.ps1  enter_transaction.ps1  gnucash_interface.ps1  launch_gnucash.ps1  open_account_register.ps1
test_data/: excel_stmt_template.xls  test_csv_for_import.csv
tests/: balance_history_report_tests.py  book_utils_tests.py  category_mapper_tests.py  fx_rate_cache_tests.py  pie_chart_report_tests.py  regex_pattern_generator_tests.py  spain_modelo_720_report_tests.py  statement_importer_tests.py  test_accounts.xml.gnucash  test_enter_transaction.py  test_fbar_report.csv  test_gnucash_interface.py  test_modelo_720_report.csv  transaction_history_tests.py  us_fbar_report_tests.py
tests/integration/: test_enter_transaction_integration.py  test_fx_rate_cache_integration.py
