[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal_finance"
version = "0.0.1"
authors = [
  { name="Vicram Kotecha" },
]
description = "Personal finance management library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/vicramkotecha/personal_finance"
Issues = "https://github.com/vicramkotecha/personal_finance/issues"